# pimpl

./: .gitignore  CMakeLists.txt  Widget.cpp  Widget.h  WidgetPrivate.cpp  WidgetPrivate.h  main.cpp  pimpl.code-workspace  pimpl.dot
